Fixed generate_hcl to used /bin/sh and documented shuttle in docker

--- a/plan.yaml
+++ b/plan.yaml
@@ -2,4 +2,4 @@ scripts:
   generate_hcl:
     description: Generate Nomad stanza files
     actions:
-      - shell: scripts/generate_hcl.sh
+      - shell: ./scripts/generate_hcl.sh
